--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
-body{
-    background-color: lightblue;
+body {
+  background-color: lightblue;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 1ch;
+  justify-content: space-between;
+  background-color: black;
+  color: cornflowerblue;
+}
+
+#links {
+  font-size: 40px;
+}
+#logo {
+  font-size: 30px;
+}
+main {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+}
+img {
+  width: 500px;
+  height: auto;
+}
+
+#blackBar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  z-index: 100;
+}
+#section1{
+    justify-self: center;
 }
