--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightblue;
+  margin: 0;
 }
 nav {
   display: flex;
@@ -14,12 +15,13 @@ nav {
   font-size: 40px;
 }
 #logo {
-  font-size: 30px;
+  font-size: 20px;
 }
 main {
   display: flex;
   flex-direction: column;
   justify-self: center;
+  text-align: center;
 }
 img {
   width: 500px;
@@ -37,6 +39,7 @@ img {
 }
 #section1 {
   justify-self: center;
+  text-align: center;
 }
 @media (width <= 600px) {
   body {
@@ -45,4 +48,26 @@ img {
     width: 100%;
     height: 100vh;
   }
+  main{
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+  #blackBar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+  z-index: 100;
+}
+nav {
+  display: flex;
+  flex-direction: row;
+  gap: 10ch;
+  justify-content: space-evenly;
+  background-color: black;
+  color: cornflowerblue;
+}
 }
