--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ main {
 img {
   width: 500px;
   height: auto;
+  justify-content: center;
 }
 
 #blackBar {
@@ -48,26 +49,29 @@ img {
     width: 100%;
     height: 100vh;
   }
-  main{
+  main {
     flex-direction: column;
     width: 100%;
     text-align: center;
   }
   #blackBar {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  background-color: #000;
-  z-index: 100;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #000;
+    z-index: 100;
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    gap: 10ch;
+    justify-content: space-evenly;
+    background-color: black;
+    color: cornflowerblue;
+  }
 }
-nav {
-  display: flex;
-  flex-direction: row;
-  gap: 10ch;
-  justify-content: space-evenly;
-  background-color: black;
-  color: cornflowerblue;
-}
+#input {
+  justify-self: center;
 }
